refactor: update to new IPLD API
This is part of the Awesome Endeavour: Async Iterators:
https://github.com/ipfs/js-ipfs/issues/1670

--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "chai": "^4.2.0",
     "detect-node": "^2.0.4",
     "dirty-chai": "^2.0.1",
-    "ipld": "~0.21.1",
+    "ipld": "~0.22.0",
     "ipld-dag-pb": "~0.15.2",
     "ipld-in-memory": "^2.0.0",
+    "multicodec": "~0.5.0",
     "pull-pushable": "^2.2.0",
     "pull-stream-to-stream": "^1.3.4",
-    "pull-zip": "^2.0.1",
     "sinon": "^7.1.0",
     "stream-to-pull-stream": "^1.7.2"
   },
@@ -54,7 +54,7 @@
     "cids": "~0.5.5",
     "hamt-sharding": "0.0.2",
     "ipfs-unixfs": "~0.1.16",
-    "ipfs-unixfs-importer": "~0.38.0",
+    "ipfs-unixfs-importer": "git+https://github.com/ipfs/js-ipfs-unixfs-importer.git#new-ipld-api",
     "pull-cat": "^1.1.11",
     "pull-defer": "~0.2.3",
     "pull-paramap": "^1.2.2",
