--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "release": "aegir release",
     "release-minor": "aegir release --type minor",
     "release-major": "aegir release --type major",
-    "coverage": "aegir coverage"
+    "coverage": "aegir coverage",
+    "dep-check": "aegir dep-check"
   },
   "repository": {
     "type": "git",
@@ -37,12 +38,17 @@
   "homepage": "https://github.com/ipfs/js-ipfs-unixfs-exporter#readme",
   "devDependencies": {
     "aegir": "^18.0.2",
+    "async-iterator-all": "0.0.2",
+    "async-iterator-buffer-stream": "0.0.1",
+    "async-iterator-first": "0.0.2",
     "chai": "^4.2.0",
     "detect-node": "^2.0.4",
     "dirty-chai": "^2.0.1",
-    "ipld": "~0.21.1",
+    "ipld": "~0.22.0",
     "ipld-dag-pb": "~0.15.2",
     "ipld-in-memory": "^2.0.0",
+    "multicodec": "^0.5.1",
+    "multihashes": "^0.4.14",
     "pull-pushable": "^2.2.0",
     "pull-stream-to-stream": "^1.3.4",
     "pull-zip": "^2.0.1",
@@ -51,14 +57,18 @@
   },
   "dependencies": {
     "async": "^2.6.1",
+    "async-iterator-last": "0.0.2",
     "cids": "~0.5.5",
+    "err-code": "^1.1.2",
     "hamt-sharding": "0.0.2",
     "ipfs-unixfs": "~0.1.16",
-    "ipfs-unixfs-importer": "~0.38.0",
+    "ipfs-unixfs-importer": "ipfs/js-ipfs-unixfs-importer#async-await",
+    "promisify-es6": "^1.0.3",
     "pull-cat": "^1.1.11",
     "pull-defer": "~0.2.3",
     "pull-paramap": "^1.2.2",
     "pull-stream": "^3.6.9",
+    "pull-stream-to-async-iterator": "^1.0.1",
     "pull-traverse": "^1.0.3"
   },
   "contributors": [
