--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "ipld": "~0.22.0",
     "ipld-dag-pb": "~0.15.2",
     "ipld-in-memory": "^2.0.0",
-    "multicodec": "^0.5.1",
-    "multihashes": "^0.4.14",
+    "multicodec": "~0.5.1",
+    "multihashes": "~0.4.14",
     "pull-pushable": "^2.2.0",
     "pull-stream-to-stream": "^1.3.4",
     "pull-zip": "^2.0.1",
