--- a/package.json
+++ b/package.json
@@ -49,27 +49,16 @@
     "ipld-in-memory": "^2.0.0",
     "multicodec": "~0.5.1",
     "multihashes": "~0.4.14",
-    "pull-pushable": "^2.2.0",
-    "pull-stream-to-stream": "^1.3.4",
-    "pull-zip": "^2.0.1",
-    "sinon": "^7.1.0",
-    "stream-to-pull-stream": "^1.7.2"
+    "sinon": "^7.1.0"
   },
   "dependencies": {
-    "async": "^2.6.1",
     "async-iterator-last": "0.0.2",
     "cids": "~0.5.5",
     "err-code": "^1.1.2",
     "hamt-sharding": "0.0.2",
     "ipfs-unixfs": "~0.1.16",
     "ipfs-unixfs-importer": "ipfs/js-ipfs-unixfs-importer#async-await",
-    "promisify-es6": "^1.0.3",
-    "pull-cat": "^1.1.11",
-    "pull-defer": "~0.2.3",
-    "pull-paramap": "^1.2.2",
-    "pull-stream": "^3.6.9",
-    "pull-stream-to-async-iterator": "^1.0.1",
-    "pull-traverse": "^1.0.3"
+    "promisify-es6": "^1.0.3"
   },
   "contributors": [
     "Alan Shaw <alan.shaw@protocol.ai>",
