--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   "homepage": "https://github.com/ipfs/js-ipfs-unixfs-exporter#readme",
   "devDependencies": {
     "aegir": "^18.0.2",
-    "async-iterator-all": "0.0.2",
-    "async-iterator-buffer-stream": "0.0.1",
-    "async-iterator-first": "0.0.2",
+    "async-iterator-all": "^1.0.0",
+    "async-iterator-buffer-stream": "^1.0.0",
+    "async-iterator-first": "^1.0.0",
     "chai": "^4.2.0",
     "detect-node": "^2.0.4",
     "dirty-chai": "^2.0.1",
@@ -53,13 +53,12 @@
     "sinon": "^7.1.0"
   },
   "dependencies": {
-    "async-iterator-last": "0.0.2",
+    "async-iterator-last": "^1.0.0",
     "cids": "~0.7.1",
     "err-code": "^1.1.2",
-    "hamt-sharding": "0.0.2",
+    "hamt-sharding": "~0.0.2",
     "ipfs-unixfs": "~0.1.16",
-    "ipfs-unixfs-importer": "~0.38.5",
-    "promisify-es6": "^1.0.3"
+    "ipfs-unixfs-importer": "~0.38.5"
   },
   "contributors": [
     "Alan Shaw <alan.shaw@protocol.ai>",
