--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "chai": "^4.2.0",
     "detect-node": "^2.0.4",
     "dirty-chai": "^2.0.1",
-    "ipld": "~0.24.0",
-    "ipld-dag-pb": "~0.17.1",
-    "ipld-in-memory": "^2.0.0",
+    "ipld": "^0.25.0",
+    "ipld-dag-pb": "^0.18.0",
+    "ipld-in-memory": "^3.0.0",
     "multicodec": "~0.5.1",
     "multihashes": "~0.4.14",
     "nyc": "^14.0.0",
