--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "err-code": "^2.0.0",
     "hamt-sharding": "^1.0.0",
     "ipfs-unixfs": "^0.3.0",
-    "ipfs-unixfs-importer": "^0.42.0"
+    "multihashing-async": "^0.8.0"
   },
   "contributors": [
     "Alan Shaw <alan.shaw@protocol.ai>",
