--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ipld": "^0.25.0",
     "ipld-dag-pb": "^0.18.0",
     "ipld-in-memory": "^3.0.0",
+    "ipfs-unixfs-importer": "^0.42.0",
     "multicodec": "^1.0.0",
     "multihashes": "^0.4.14",
     "nyc": "^15.0.0",
