--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sinon": "^8.0.4"
   },
   "dependencies": {
+    "cids": "^0.7.1",
     "err-code": "^2.0.0",
     "hamt-sharding": "^1.0.0",
     "ipfs-unixfs": "^0.3.0",
